# xapp

./: README.md  pyproject.toml  requirements-tests.txt
.github/workflows/: scorecard.yml
app/: main.py
tests/: test_main.py
xapp/: app.py
