[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xapp"
version = "0.0.0"
package-mode = false
description = "Mr. Key Security Focused Application"
readme = "README.md"
license = "LICENSE"
authors = ["Mr. Key"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "~0.115.4"

[tool.poetry.urls]
Homepage = "https://github.com/0x-key/xapp"
Repository = "https://github.com/0x-key/xapp"
Issues = "https://github.com/0x-key/xapp/issues"